Grace/tests/gibbs/errors/t272.grace
// ERROR = P1018
var negative := -
var positive := 7
